[package]
name = "gnucobol-rs-link"
version = "0.1.0"
edition = "2021"
description = "gnucobol-rs inter-program linkage: CALL/CANCEL, BY REFERENCE/CONTENT/VALUE parameter passing, and dynamic program loading."
authors = ["infinityabundance"]
license = "LGPL-3.0-or-later"
repository = "https://github.com/infinityabundance/gnucobol-rs-link"
readme = "README.md"
publish = false  # empty scaffold; flip to publishable once the implementation lands

[dependencies]
# A faithful-port satellite of the gnucobol-rs ecosystem. Depends on the gnucobol-rs core primitives.
# Activate when the implementation lands: gnucobol-rs = "0.7"
