[package]
name = "gnucobol-rs-link"
version = "0.1.0"
edition = "2021"
description = "gnucobol-rs inter-program linkage: BY REFERENCE / BY CONTENT / BY VALUE parameter-passing byte semantics over the oracle-proven gnucobol-rs core (the CALL.LAYOUT court). Dynamic dlopen loading is a deferred, separately-gated feature."
authors = ["infinityabundance"]
license = "LGPL-3.0-or-later"
repository = "https://github.com/infinityabundance/gnucobol-rs-link"
readme = "README.md"
keywords = ["cobol", "gnucobol", "call", "linkage", "ffi"]
categories = ["encoding"]

[dependencies]
gnucobol-rs = "0.7"
